# shipslogs

./: README.md  pyproject.toml  todo
src/shipslogs/: config.json  example.py  gui.py  helpergui.py  loader.py  main.py  makefile  ocr.py  transcript.py
